--- a/includes/css/style.css
+++ b/includes/css/style.css
@@ -1,4 +1,4 @@
-body{
+/* body{
 	background-color:#f4f4f4;
 
 	line-height:1.6em;
@@ -59,8 +59,7 @@ header{
 	display: block;
   width: 300px;
 	height:auto;
-	/* margin: 20px auto; */
-	border-radius: 10px;
+		border-radius: 10px;
 	border: 3px solid black;
 	margin: 20px auto;
 }
@@ -135,4 +134,4 @@ footer{
   width: 50px;
   height: 50px;
 
-}
+} */
